adjusted about and project sections

--- a/src/index.html
+++ b/src/index.html
@@ -124,8 +124,8 @@
             </div>
         </div>
         <div class="about__timeline">
-            <p class="about__timeline--content" id="shadedImage">
-                <span class="gradient-text">2013 | </span> I began my career in banking and finance working for Wells
+            <p class="about__timeline--content" >
+            <span class="gradient-text" tabindex="0" id="shadedImage" >2013 | </span> I began my career in banking and finance working for Wells
                 Fargo in Raleigh, NC. Through hard work and great customer
                 service, I was able to move to New York in 2016 as a Banker. While in New York I filled the roles of
                 Banker I, Service
@@ -133,16 +133,16 @@
                 was located next to one of our developer hubs. Talking to the developers about
                 our software and how to improve it began to pique my interest in coding.
             </p>
-            <p class="about__timeline--content" id="shadedImage">
-                <span class="gradient-text">2019 | </span>Helped found SellSafe, LLC in Wichita, KS. A Software as a
+            <p class="about__timeline--content" >
+                <span class="gradient-text" tabindex="0" id="shadedImage">2019 | </span>Helped found SellSafe, LLC in Wichita, KS. A Software as a
                 Service company, we sought to develop an app that would help small
                 businesses make better-informed credit decisions. I helped secure initial funding, created the pitch
                 deck, and worked
                 with developers on creating a semi-functional prototype. It’s here that I discovered an interest in
                 UI/UX.
             </p>
-            <p class="about__timeline--content" id="shadedImage">
-                <span class="gradient-text">2020 | </span> Due to COVID putting a halt to investments, I sought out
+            <p class="about__timeline--content" >
+                <span class="gradient-text" tabindex="0" id="shadedImage">2020 | </span> Due to COVID putting a halt to investments, I sought out
                 employment that would also give me some free time to help with
                 family in Wichita. I was hired at Whole Foods and quickly was moved to a supervisor over customer
                 service. During that
@@ -150,8 +150,8 @@
                 things: 1 – I
                 wanted to code and 2 – I had no idea what I was doing.
             </p>
-            <p class="about__timeline--content" id="shadedImage">
-                <span class="gradient-text">2021 | </span> I joined the coding bootcamp Coding Temple in October with
+            <p class="about__timeline--content" >
+                <span class="gradient-text" tabindex="0" id="shadedImage">2021 | </span> I joined the coding bootcamp Coding Temple in October with
                 the intention of going into data science. This seemed logical
                 considering my background in finance and my love of data. However, while we only spent 3 of the 10 weeks
                 on frontend
@@ -159,8 +159,8 @@
                 knew only the
                 bare minimum of how to code, but I knew one thing; I wanted to be a creative developer.
             </p>
-            <p class="about__timeline--content" id="shadedImage">
-                <span class="gradient-text">PRESENT | </span> Since finishing bootcamp I’ve thrown myself into learning
+            <p class="about__timeline--content" >
+                <span class="gradient-text" tabindex="0" id="shadedImage">PRESENT | </span> Since finishing bootcamp I’ve thrown myself into learning
                 the basics (HTML/CSS/JS), looking over MDN documentation until
                 the wee hours of the morning, and constantly rebuilding my own website as a way to learn. I’ve learned
                 WebGL, Blender,
@@ -170,8 +170,8 @@
                 and taking what
                 I’ve learned and building my own stuff.</span>
             </p>
-            <p class="about__timeline--content" id="shadedImage">
-                <span class="gradient-text">WILL YOUR COMPANY FILL THIS SECTION?</span>
+            <p class="about__timeline--content" >
+                <span class="gradient-text" tabindex="0" id="shadedImage">WILL YOUR COMPANY FILL THIS SECTION?</span>
             </p>
         </div>
         <div class="about__container">
@@ -183,7 +183,7 @@
     <!-------- SKILLS SECTION --------->
     <!--------------------------------->
 
-    <section class="skills" id="skills">
+    <section class="skills" id="skills" tabindex="0">
         <div class="skills__personal-header">
             <span class="skills__personal-header--title">Who I Am</span>
         </div>
@@ -251,7 +251,7 @@
                             src="assets/images/projects/3dgalaxy.jpg" alt="galaxy" class="projects__header--img"></a>
                 </div>
                 <div class="projects__content">
-                    <h3 class="projects__content--title">WebGL Galaxy Generator</h3>
+                    <h3 class="projects__content--title">WebGL Galaxy</h3>
                     <a href="https://github.com/BorofskyDev/galaxy-generator.git" target="__blank">
                         <h5 class="projects__content--subtitle">Repository</h5>
                     </a>
@@ -593,6 +593,9 @@
     <script src="assets/js/config.js"></script>
     <script src="assets/js/threeBg.js"></script>
     <script src="assets/js/faq.js"></script>
+    <!-- Shaded image isn't working for some reason. Need more time to figure it out.
+    Leaving here just in case I eventually do. -->
+    <!-- <script src="assets/js/shadedImage.js"></script> -->
 </body>
 
 </html>
