created test for navbar, succeeded

--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,9 @@
 <body>
     <a href="#about" class="skip-to-content">Skip to Content</a>
 
+    <section class="test">
+        <button>test this</button>
+    </section>
     <!--------------------------------->
     <!-------- LANDING SECTION -------->
     <!--------------------------------->
