cleaned up and organized code

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head prefix="og: https://ogp.me/ns#">
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Joel Borofsky" />
@@ -60,9 +60,6 @@
 <body>
     <a href="#about" class="skip-to-content">Skip to Content</a>
 
-    <section class="test">
-        <button>test this</button>
-    </section>
     <!--------------------------------->
     <!-------- LANDING SECTION -------->
     <!--------------------------------->
@@ -127,8 +124,9 @@
             </div>
         </div>
         <div class="about__timeline">
-            <p class="about__timeline--content" >
-            <span class="gradient-text" tabindex="0" id="shadedImage" >2013 | </span> I began my career in banking and finance working for Wells
+            <p class="about__timeline--content">
+                <span class="gradient-text" tabindex="0" id="shadedImage">2013 | </span> I began my career in banking
+                and finance working for Wells
                 Fargo in Raleigh, NC. Through hard work and great customer
                 service, I was able to move to New York in 2016 as a Banker. While in New York I filled the roles of
                 Banker I, Service
@@ -136,16 +134,18 @@
                 was located next to one of our developer hubs. Talking to the developers about
                 our software and how to improve it began to pique my interest in coding.
             </p>
-            <p class="about__timeline--content" >
-                <span class="gradient-text" tabindex="0" id="shadedImage">2019 | </span>Helped found SellSafe, LLC in Wichita, KS. A Software as a
+            <p class="about__timeline--content">
+                <span class="gradient-text" tabindex="0" id="shadedImage">2019 | </span>Helped found SellSafe, LLC in
+                Wichita, KS. A Software as a
                 Service company, we sought to develop an app that would help small
                 businesses make better-informed credit decisions. I helped secure initial funding, created the pitch
                 deck, and worked
                 with developers on creating a semi-functional prototype. It’s here that I discovered an interest in
                 UI/UX.
             </p>
-            <p class="about__timeline--content" >
-                <span class="gradient-text" tabindex="0" id="shadedImage">2020 | </span> Due to COVID putting a halt to investments, I sought out
+            <p class="about__timeline--content">
+                <span class="gradient-text" tabindex="0" id="shadedImage">2020 | </span> Due to COVID putting a halt to
+                investments, I sought out
                 employment that would also give me some free time to help with
                 family in Wichita. I was hired at Whole Foods and quickly was moved to a supervisor over customer
                 service. During that
@@ -153,8 +153,9 @@
                 things: 1 – I
                 wanted to code and 2 – I had no idea what I was doing.
             </p>
-            <p class="about__timeline--content" >
-                <span class="gradient-text" tabindex="0" id="shadedImage">2021 | </span> I joined the coding bootcamp Coding Temple in October with
+            <p class="about__timeline--content">
+                <span class="gradient-text" tabindex="0" id="shadedImage">2021 | </span> I joined the coding bootcamp
+                Coding Temple in October with
                 the intention of going into data science. This seemed logical
                 considering my background in finance and my love of data. However, while we only spent 3 of the 10 weeks
                 on frontend
@@ -162,8 +163,9 @@
                 knew only the
                 bare minimum of how to code, but I knew one thing; I wanted to be a creative developer.
             </p>
-            <p class="about__timeline--content" >
-                <span class="gradient-text" tabindex="0" id="shadedImage">PRESENT | </span> Since finishing bootcamp I’ve thrown myself into learning
+            <p class="about__timeline--content">
+                <span class="gradient-text" tabindex="0" id="shadedImage">PRESENT | </span> Since finishing bootcamp
+                I’ve thrown myself into learning
                 the basics (HTML/CSS/JS), looking over MDN documentation until
                 the wee hours of the morning, and constantly rebuilding my own website as a way to learn. I’ve learned
                 WebGL, Blender,
@@ -173,7 +175,7 @@
                 and taking what
                 I’ve learned and building my own stuff.</span>
             </p>
-            <p class="about__timeline--content" >
+            <p class="about__timeline--content">
                 <span class="gradient-text" tabindex="0" id="shadedImage">WILL YOUR COMPANY FILL THIS SECTION?</span>
             </p>
         </div>
@@ -369,7 +371,8 @@
                 <div class="question__answer">
                     <p>
                         It's a simple portfolio site that's meant to show off design. There's not a lot
-                        here to get through and it's easy to scroll.
+                        here to get through and it's easy to scroll. Plus, the site is accessible
+                        and you can tab to every section.
                     </p>
                 </div>
             </div>
