--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
             sales, and customer service. I believe in creating exciting, interactive websites that 
             blur the line between art and marketing. The goal in any build is to 
             make the site so fun that people want to keep exploring it.">
-    <meta property="og:image" content="./assets/images/joelBorofsky.jpg">
+    <meta property="og:image" content="https://joelborofsky.com/joelBorofsky.4f826698.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -53,7 +53,7 @@
             sales, and customer service. I believe in creating exciting, interactive websites that 
             blur the line between art and marketing. The goal in any build is to 
             make the site so fun that people want to keep exploring it.">
-    <meta property="twitter:image" content="./assets/images/joelBorofsky.jpg">
+    <meta property="twitter:image" content="https://joelborofsky.com/joelBorofsky.4f826698.jpg">
 
 </head>
 
